# blender-mcp

./: TERMS_AND_CONDITIONS.md  addon.py  blender_tools.py  main.py  pyproject.toml
tests/: test_server.py
